--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,12 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>42.2.10</version>
-        </dependency>
+    <dependency>
+        <groupId>com.oracle</groupId>
+        <artifactId>ojdbc</artifactId>
+        <version>8</version>
+        <scope>system</scope>
+        <systemPath>d:/projects/ojdbc8.jar</systemPath>
+    </dependency>
     </dependencies>
 </project>
