--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <artifactId>ojdbc</artifactId>
         <version>8</version>
         <scope>system</scope>
-        <systemPath>d:/projects/ojdbc8.jar</systemPath>
+        <systemPath>ojdbc14.jar</systemPath>
     </dependency>
     </dependencies>
 </project>
